--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -48,7 +48,7 @@
                                 <!-- Horizontal menu -->
                                 <ul id="main-menu" class="sm pixelstrap sm-horizontal" style="margin-inline-start: -50%;">
                                     <li>
-                                        <a href="index.html">Accueil</a>
+                                        <a href="/homepage">Accueil</a>
                                     </li>
                                     <li>
                                         <a href="/category-page">Nos Produits</a>
