--- a/src/app/product-page/product-page.component.html
+++ b/src/app/product-page/product-page.component.html
@@ -8,16 +8,16 @@
           <div class="row">
               <div class="col-lg-6">
                   <div class="product-slick">
-                      <div><img src="../assets/images/pro3/The_blanc_fruit_exotic.jpg" alt="" class="img-fluid lazyload image_zoom_cls-0"></div>
+                      <div><img src="{{product.url}}" alt="" class="img-fluid lazyload image_zoom_cls-0"></div>
                   </div>
               </div>
               <div class="col-lg-6 rtl-text">
                   <div class="product-right">
-                      <h2>Thé Blanc Exotique</h2>
-                      <h4><del>€39.00</del><span>-10%</span></h4>
-                      <h3>€35.10</h3>
+                      <h2>{{product.name}}</h2>
+                     
+                     <h4 *ngIf="product.price!=0"><del >€{{product.price}}</del><span>-{{product.discountRate}}%</span></h4>
+                      <h3>€{{ product.price * (1 - product.discountRate / 100)}}</h3>
                       <div class="product-description border-product">
-                          <h6 class="product-title size-text">Choisissez la taille de la pochette.</h6>
                           <div class="modal fade" id="sizemodal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                               <div class="modal-dialog modal-dialog-centered" role="document">
                                   <div class="modal-content">
@@ -25,16 +25,9 @@
                                           <h5 class="modal-title" id="exampleModalLabel">Sheer Straight Kurta</h5>
                                           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                                       </div>
-                                      <div class="modal-body"><img src="../assets/images/size-chart.jpg" alt="" class="img-fluid blur-up lazyload"></div>
+                                      <div class="modal-body"><img src="{{product.url}}" alt="" class="img-fluid blur-up lazyload"></div>
                                   </div>
                               </div>
-                          </div>
-                          <div class="size-box">
-                              <ul>
-                                  <li class="active"><a >100 grs</a></li>
-                                  <li><a >200 grs</a></li>
-                                  <li><a >500 grs</a></li>
-                              </ul>
                           </div>
                           <h6 class="product-title">Quantité</h6>
                           <div class="qty-box">
@@ -45,8 +38,7 @@
                       <div class="product-buttons"><a  data-toggle="modal" data-target="#addtocart" class="btn btn-solid">Ajouter au panier</a></div>
                       <div class="border-product">
                           <h6 class="product-title">Détails du produit</h6>
-                          <p>Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo. Nemo enim ipsam voluptatem,</p>
-                      </div>
+                          <p>{{product.description}}</div>
                   </div>
               </div>
           </div>
