--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -19,7 +19,7 @@
 <section class="cart-section section-b-space">
     <div class="container">
         <div class="row">
-            <div class="col-sm-12">
+            <div class="col-sm-12" *ngFor="let order of orders.productOrders">
                 <table class="table cart-table table-responsive-xs">
                     <thead>
                     <tr class="table-head">
@@ -34,15 +34,14 @@
                     <tbody>
                     <tr>
                         <td>
-                            <a href="the-blanc"><img src="../assets/images/the-cafe/The_blanc.jpg" alt=""></a>
+                            <a href="${{order.product.type}}"><img src=${{order.product.url}} alt=""></a>
                         </td>
                         <td class="product-name" data-title="Product"> <a
-                          href="https://themes.muffingroup.com/be/herbal/product/sed-fringilla-tempus/"> <b>Thé
-                          Blanc</b>
+                          href=${{order.product.url}}> <b>{{ order.product.name }}</b>
                       </a>
-                      <p>Origine : Chine</p>
+                      <p>Origine : ${{order.product.origin}}</p>
                       <span class="conditioning">
-                          <span class="current-conditioning">250g</span>
+                          <span class="current-conditioning">${{order.product.packaging}}</span>
                       </span>
                             <div class="mobile-cart-content row">
                                 <div class="col-xs-3">
@@ -52,14 +51,14 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-xs-3">
-                                    <h2 class="td-color">€10,20</h2></div>
+                                <div class="col-xs-3" >
+                                    <h2 class="td-color">{{ order.product.name }} - {{ order.quantity}} pcs.</h2></div>
                                 <div class="col-xs-3">
                                     <h2 class="td-color"><a href="#" class="icon"><i class="ti-close"></i></a></h2></div>
                             </div>
                         </td>
                         <td>
-                            <h2>€10,20</h2></td>
+                            <h2>${{order.product.price}}</h2></td>
                         <td>
                             <div class="qty-box">
                                 <div class="input-group">
@@ -69,46 +68,16 @@
                         </td>
                         <td><a href="#" class="icon"><i class="ti-close"></i></a></td>
                         <td>
-                            <h2 class="td-color">€10,20</h2></td>
+                            <h2 class="td-color">${{order.product.price}}</h2></td>
                     </tr>
                     </tbody>
-                    <tbody>
-                    <tr>
-                        <td>
-                            <a href="cafe-intenso"><img src="../assets/images/the-cafe/cafe_intenso.jpg" alt=""></a>
-                        </td>
-                        <td class="product-name" data-title="Product"> <a
-                          src="images/cafe_intenso.jpg"> <b>Café
-                          arabica</b>
-                      </a>
-                      <p>Origine : Ethiopie</p>
-                      <span class="conditioning">
-                          <span class="current-conditioning">250g</span>
-                      </span>
-
-                  </td>
-                        <td>
-                            <h2>€18.40</h2></td>
-                        <td>
-                            <div class="qty-box">
-                                <div class="input-group">
-                                    <input type="number" name="quantity" class="form-control input-number" value="2">
-                                </div>
-                            </div>
-                        </td>
-                        <td><a href="#" class="icon"><i class="ti-close"></i></a></td>
-                        <td>
-                            <h2 class="td-color">€36,80</h2></td>
-                    </tr>
-                    </tbody>
-
                 </table>
                 <table class="table cart-table table-responsive-md">
                     <tfoot>
                     <tr>
                         <td>Prix total :</td>
                         <td>
-                            <h2>€47.00</h2></td>
+                            <h2>${{total}}</h2></td>
                     </tr>
                     </tfoot>
                 </table>
@@ -116,7 +85,8 @@
         </div>
         <div class="row cart-buttons">
             <div class="col-6"><a routerLink="/category-page" routerLinkActive="active" class="btn btn-solid">Continuer les achats</a></div>
-            <div class="col-6"><a routerLink="/checkout" routerLinkActive="active" class="btn btn-solid">Valider la commande</a></div>
+            <div class="col-6"><a routerLink="/checkout" routerLinkActive="active" class="btn btn-solid" (click)="finishOrder()"
+               >Valider la commande</a></div>
         </div>
     </div>
 </section>
