--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -42,7 +42,7 @@
                                     </thead>
                                     <tbody>
                                     <tr *ngFor="let order of orders">
-                                        <td>{{order.id}}</td>
+                                        <td> <a [routerLink]="['/order-detail', order.id]">{{order.id}}</a></td>
                                         <td>{{order.user.firstName}} {{order.user.lastName}}</td>
                                         <td> {{order.shippingAdress}}</td>
                                         <td><span *ngIf=" order.ordersStatus=='DELIVERED'" class="badge badge-success"> {{order.ordersStatus}}</span>
