--- a/src/app/order-detail/order-detail.component.html
+++ b/src/app/order-detail/order-detail.component.html
@@ -1,1 +1,80 @@
-<p>order-list-detail works!</p>
+<!-- page-wrapper Start-->
+<div class="page-wrapper">
+
+    <!-- Page Header Start-->
+    <app-admin-header></app-admin-header>
+    <!-- Page Header Ends -->
+
+
+    <!-- Page Body Start-->
+    <div class="page-body-wrapper">
+
+        <!-- Page Sidebar Start-->
+        <div class="page-sidebar">
+        <app-admin-sidebar></app-admin-sidebar>
+        </div>
+
+
+        <div class="page-body">
+          
+            <!-- Container-fluid starts-->
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div class="card">
+                            <div class="card-header col-sm-12">
+                                <h5>Liste de commandes</h5>
+                            </div>
+                            <div class="card-body order-datatable col-12">
+                                <table class="display col-12" id="basic-1" style="text-align: center;">
+                                <h5>Détail de la commande</h5>
+                            <div class="card-body order-datatable col-12">
+                                <table class="display col-12" id="basic-1">
+                                    <thead>
+                                    <tr>
+                                        <th>Nom du produit</th>
+                                        <th>Quantité</th>
+                                        <th>Prix</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr *ngFor="let orderLine of orderlines">
+                                        <td>{{orderline.product.name}}</td>
+                                        <td>{{orderline.quantity}}</td>                                       
+                                        <td>{{orderline.product.price}}*{{orderline.quantity}} €</td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+            <!-- Container-fluid Ends-->
+
+<!-- latest jquery-->
+<script src="../assets/js/jquery-3.3.1.min.js"></script>
+
+<!-- Bootstrap js-->
+<script src="../assets/js/popper.min.js"></script>
+<script src="../assets/js/bootstrap.js"></script>
+
+<!-- feather icon js-->
+<script src="../assets/js/icons/feather-icon/feather.min.js"></script>
+<script src="../assets/js/icons/feather-icon/feather-icon.js"></script>
+
+<!-- Sidebar jquery-->
+<script src="../assets/js/sidebar-menu.js"></script>
+
+<!-- Datatable js-->
+<script src="../assets/js/datatables/jquery.dataTables.min.js"></script>
+<script src="../assets/js/datatables/custom-basic.js"></script>
+
+<!--Customizer admin-->
+<script src="../assets/js/admin-customizer.js"></script>
+
+<!-- lazyload js-->
+<script src="../assets/js/lazysizes.min.js"></script>
+
+<!--right sidebar js-->
+<script src="../assets/js/chat-menu.js"></script>
+
+<!--script admin-->
+<script src="../assets/js/admin-script.js"></script>
+
