--- a/src/app/user-modifier/user-modifier.component.html
+++ b/src/app/user-modifier/user-modifier.component.html
@@ -13,120 +13,137 @@
 
     <!--Navbar user-->
 
-    <div class="page-body">
-      <h2 style="text-align: center; margin-top: 5%;">Modifier mon profil</h2>
-      <!-- personal detail section start -->
-      <section class="contact-page register-page">
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-12">
-              <h5>Données personnelles</h5>
-              <form class="theme-form">
+    <section class="register-page section-b-space">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <h3>Mofifier mes informations</h3>
+            <div class="theme-card">
+              <form class="theme-form" #modifiedUserform="ngForm" (ngSubmit)="onSubmit()">
                 <div class="form-row">
+
                   <div class="col-md-6">
-                    <label for="name">Prénom</label>
-                    <input type="text" class="form-control" id="name" placeholder="" required="">
+                    <label class="col-xl-8 col-sm-6 mb-0" style="margin-left:-2%">Civilité
+                      :</label>
+                    <select class="form-control digits col-xl-8 col-sm-7" name="type"
+                      style="margin-left: 1%; margin-bottom: 3%; margin-top: 1%" [(ngModel)]="userModel.civility">
+                      <option value='MR'>Monsieur</option>
+                      <option value='MME'>Madame</option>
+                    </select>
                   </div>
+                </div>
+
+                <div class="form-row">
                   <div class="col-md-6">
                     <label for="email">Nom</label>
-                    <input type="text" class="form-control" id="last-name" placeholder="" required="">
+                    <input type="text" class="form-control" name="lastName" placeholder="Nom" required=""
+                      [(ngModel)]="userModel.lastName">
                   </div>
+
                   <div class="col-md-6">
-                    <label for="review">Numéro de téléphone</label>
-                    <input type="text" class="form-control" id="review" placeholder="" required="">
-                  </div>
-                  <div class="col-md-6">
-                    <label for="email">Adresse Email</label>
-                    <input type="text" class="form-control" id="email" placeholder="" required="">
-                  </div>
-                  <div class="col-md-12">
-                    <button class="btn btn-sm btn-solid" type="submit">Enregistrer les modifications</button>
+                    <label for="review">Prénom</label>
+                    <input type="text" class="form-control" name="firstName" placeholder="Prénom" required=""
+                      [(ngModel)]="userModel.firstName">
                   </div>
                 </div>
-              </form>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- Section ends -->
 
-      <!-- address section start -->
-      <section class="contact-page register-page section-b-space">
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-12">
-              <h5>Adresse de livraison</h5>
-              <form class="theme-form">
                 <div class="form-row">
                   <div class="col-md-12">
-                    <label for="address">Adresse</label>
-                    <input type="text" class="form-control" id="address-one" placeholder="" required="">
-                    <input type="text" class="form-control" id="address-two" placeholder="" required="">
-                  </div>
-                  <div class="col-md-6">
-                    <label for="zip">Code postal</label>
-                    <input type="text" class="form-control" id="zip" placeholder="" required="">
-                  </div>
-                  <div class="col-md-6">
-                    <label for="email">ville</label>
-                    <input type="text" class="form-control" id="city" placeholder="" required="">
-                  </div>
-
-                  <div class="col-md-12">
-                    <button class="btn btn-sm btn-solid" type="submit">Enregistrer les modifications</button>
+                    <label for="email">adresse</label>
+                    <input type="text" class="form-control" name="address" placeholder="adresse" required=""
+                      [(ngModel)]="userModel.adresse">
                   </div>
                 </div>
+
+                <div class="form-row">
+                  <div class="col-md-6">
+                    <label for="email">Code Postale</label>
+                    <input type="text" class="form-control" name="postalCode" placeholder="Code Postale" required=""
+                      [(ngModel)]="userModel.postalCode">
+                  </div>
+
+                  <div class="col-md-6">
+                    <label for="review">Ville</label>
+                    <input type="text" class="form-control" name="City" placeholder="Ville" required=""
+                      [(ngModel)]="userModel.city">
+                  </div>
+                </div>
+
+
+                <div class="form-row">
+                  <div class="col-md-6">
+                    <label for="email">email</label>
+                    <input type="text" class="form-control" name="email" placeholder="Email" required=""
+                      [(ngModel)]="userModel.email">
+                  </div>
+
+                  <div class="col-md-6">
+                    <label for="review">Telephone</label>
+                    <input type="text" class="form-control" name="telephone"
+                      placeholder="Entrez les 10 chiffres de votre numéro de téléphone" required=""
+                      [(ngModel)]="userModel.phoneNumber">
+                  </div>
+                </div>
+
+                <div class="col-md-6">
+                  <label for="review">Mot de passe</label>
+                  <input type="text" class="form-control" name="password" placeholder="Entrez votre mot de passe"
+                    required="" [(ngModel)]="userModel.password" style="margin-left: -3%">
+                </div>
+
+                <a routerLink="/user-dashboard" routerLinkActive="active" class="btn btn-solid">Valider</a>
               </form>
             </div>
           </div>
         </div>
-      </section>
-      <!-- Section ends -->
+      </div>
+    </section>
+    <!-- Section ends -->
 
 
-    </div>
   </div>
-  <app-footer></app-footer>
+</div>
+<app-footer></app-footer>
 
-  <!-- tap to top -->
-  <div class="tap-top">
-    <div>
-      <i class="fa fa-angle-double-up"></i>
-    </div>
+<!-- tap to top -->
+<div class="tap-top">
+  <div>
+    <i class="fa fa-angle-double-up"></i>
   </div>
-  <!-- tap to top End -->
+</div>
+<!-- tap to top End -->
 
 
-  <!-- latest jquery-->
-  <script src="../assets/js/jquery-3.3.1.min.js"></script>
+<!-- latest jquery-->
+<script src="../assets/js/jquery-3.3.1.min.js"></script>
 
-  <!-- menu js-->
-  <script src="../assets/js/menu.js"></script>
+<!-- menu js-->
+<script src="../assets/js/menu.js"></script>
 
-  <!-- lazyload js-->
-  <script src="../assets/js/lazysizes.min.js"></script>
+<!-- lazyload js-->
+<script src="../assets/js/lazysizes.min.js"></script>
 
-  <!-- popper js-->
-  <script src="../assets/js/popper.min.js"></script>
+<!-- popper js-->
+<script src="../assets/js/popper.min.js"></script>
 
-  <!-- slick js-->
-  <script src="../assets/js/slick.js"></script>
+<!-- slick js-->
+<script src="../assets/js/slick.js"></script>
 
-  <!-- Bootstrap js-->
-  <script src="../assets/js/bootstrap.js"></script>
+<!-- Bootstrap js-->
+<script src="../assets/js/bootstrap.js"></script>
 
-  <!-- Bootstrap Notification js-->
-  <script src="../assets/js/bootstrap-notify.min.js"></script>
+<!-- Bootstrap Notification js-->
+<script src="../assets/js/bootstrap-notify.min.js"></script>
 
-  <!-- Theme js-->
-  <script src="../assets/js/script.js"></script>
+<!-- Theme js-->
+<script src="../assets/js/script.js"></script>
 
-  <script>
-    function openSearch() {
-      document.getElementById("search-overlay").style.display = "block";
-    }
+<script>
+  function openSearch() {
+    document.getElementById("search-overlay").style.display = "block";
+  }
 
-    function closeSearch() {
-      document.getElementById("search-overlay").style.display = "none";
-    }
-  </script>
+  function closeSearch() {
+    document.getElementById("search-overlay").style.display = "none";
+  }
+</script>
