--- a/src/app/user-modifier/user-modifier.component.html
+++ b/src/app/user-modifier/user-modifier.component.html
@@ -50,15 +50,15 @@
                 <div class="form-row">
                   <div class="col-md-12">
                     <label for="email">adresse</label>
-                    <input type="text" class="form-control" name="address" placeholder="adresse" required=""
-                      [(ngModel)]="userModel.adresse">
+                    <input type="text" class="form-control" name="adress" placeholder="adresse" required=""
+                      [(ngModel)]="userModel.adress">
                   </div>
                 </div>
 
                 <div class="form-row">
                   <div class="col-md-6">
-                    <label for="email">Code Postale</label>
-                    <input type="text" class="form-control" name="postalCode" placeholder="Code Postale" required=""
+                    <label for="email">Code Postal</label>
+                    <input type="text" class="form-control" name="postalCode" placeholder="Code Postal" required=""
                       [(ngModel)]="userModel.postalCode">
                   </div>
 
