--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,7 +8,7 @@
                 <h3>Login</h3>
                 <div class="theme-card">
                   <div class="login-error" *ngIf="invalidLogin === true">
-                    ALEEEEEEEEERTE
+                    Email ou mot de passe incorrect.
                   </div>
                     <form class="theme-form">
                         <div class="form-group">
