--- a/src/app/category-page/category-page.component.html
+++ b/src/app/category-page/category-page.component.html
@@ -16,10 +16,10 @@
                         <div class="col-12">
                           <div class="product-filter-content">
                             <select name="orderby" class="orderby" [formControl]="boxCtrl">
-                              <option value="" selected="selected">Tous les produits</option >
-                              <option value="CAFE" >Tous nos cafés</option>
+                              <option value="" selected="selected">Tous les produits</option>
+                              <option value="CAFE">Tous nos cafés</option>
                               <option value="CAFE_ARABICA">Cafés Arabica</option>
-                              <option value="CAFE_ROBUSTA">Cafés Robusta</option >
+                              <option value="CAFE_ROBUSTA">Cafés Robusta</option>
                               <option value="CAFE_BLEND">Mélange de Cafés</option>
                               <option value="THE">Tous nos thés</option>
                               <option value="THE_BLANC">Thés Blanc</option>
@@ -30,7 +30,8 @@
                             <div class="product-page-per-view"></div>
                             <form class="form-header">
                               <div class="input-group">
-                                <input type="text" class="form-control" [formControl]="inputCtrl" aria-label="Amount (to the nearest dollar)"placeholder="Chercher un produit" />
+                                <input type="text" class="form-control" [formControl]="inputCtrl"
+                                  aria-label="Amount (to the nearest dollar)" placeholder="Chercher un produit" />
                                 <div class="input-group-append">
                                   <button class="btn btn-solid">
                                     <i class="fa fa-search"></i>Rechercher</button>
@@ -44,35 +45,40 @@
                   </div>
                   <div class="product-wrapper-grid">
                     <div class="row">
-                      <div
-                        *ngFor="let product of displayValues" class="col-xl-4 col-md-8 col-grid-box">
+                      <div *ngFor="let product of displayValues" class="col-xl-4 col-md-8 col-grid-box">
                         <div class="product-box">
                           <div class="img-wrapper">
                             <div class="front">
-                              <a [routerLink]="['/product-page', product.id]"><img src="{{ product.url }}" alt=""/></a>
+                              <a [routerLink]="['/product-page', product.id]"><img src="{{ product.url }}" alt="" /></a>
                             </div>
                             <div class="back">
-                              <a [routerLink]="['/product-page', product.id]"><img src="{{ product.url }}" alt=""/></a>
+                              <a [routerLink]="['/product-page', product.id]"><img src="{{ product.url }}" alt="" /></a>
                             </div>
                             <div class="cart-info cart-wrap">
                               <button data-toggle="modal" data-target="#addtocart" title="Add to cart">
                                 <i class="ti-shopping-cart"></i>
                               </button>
-                              <a href="javascript:void(0)" title="Add to Wishlist"><i class="ti-heart" aria-hidden="true"></i></a>
-                              <a href="#" data-toggle="modal"  data-target="#quick-view" title="Quick View"><i class="ti-search" aria-hidden="true"></i ></a>
-                              <a href="compare.html" title="Compare"><i class="ti-reload" aria-hidden="true"></i ></a>
+                              <a href="javascript:void(0)" title="Add to Wishlist"><i class="ti-heart"
+                                  aria-hidden="true"></i></a>
+                              <a href="#" data-toggle="modal" data-target="#quick-view" title="Quick View"><i
+                                  class="ti-search" aria-hidden="true"></i></a>
+                              <a href="compare.html" title="Compare"><i class="ti-reload" aria-hidden="true"></i></a>
                             </div>
                           </div>
                           <div class="product-detail">
                             <div>
-                              <a href="product-page(no-sidebar).html"><h6>{{ product.name }}</h6></a >
+                              <a href="product-page(no-sidebar).html">
+                                <h6>{{ product.name }}</h6>
+                              </a>
                               <h4>
                                 A partir de&nbsp;
                                 <span [ngClass]="{ stroke: product.discountRate }">{{ product.price }}€</span>
                                 &nbsp;
-                                <span *ngIf="product.discountRate">{{ product.price * (1 - product.discountRate / 100)}}€</span>
+                                <span
+                                  *ngIf="product.discountRate">{{ product.price * (1 - product.discountRate / 100)}}€</span>
                               </h4>
-                              <br /><input type="button" class="addtocart-button" value="Ajouter au panier"/>
+
+                              <br /><input type="button" class="addtocart-button" value="Ajouter au panier" />
                             </div>
                           </div>
                         </div>
