--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,8 +7,9 @@
             <div class="col-lg-6">
                 <h3>Login</h3>
                 <div class="theme-card">
-                  <div class="login-error" *ngIf="invalidLogin === true">
+                  <div class="login-error" *ngIf="invalidLogin === true" style="color: red">
                     Email ou mot de passe incorrect.
+                    <br>
                   </div>
                     <form class="theme-form">
                         <div class="form-group">
