--- a/src/app/user-modifier/user-modifier.component.html
+++ b/src/app/user-modifier/user-modifier.component.html
@@ -57,8 +57,8 @@
 
                 <div class="form-row">
                   <div class="col-md-6">
-                    <label for="email">Code Postale</label>
-                    <input type="text" class="form-control" name="postalCode" placeholder="Code Postale" required=""
+                    <label for="email">Code Postal</label>
+                    <input type="text" class="form-control" name="postalCode" placeholder="Code Postal" required=""
                       [(ngModel)]="userModel.postalCode">
                   </div>
 
