--- a/src/app/user-navbar/user-navbar.component.html
+++ b/src/app/user-navbar/user-navbar.component.html
@@ -1,5 +1,5 @@
 <div class="main-header-left d-none d-lg-block">
-  <div class="logo-wrapper"><a href="index.html"><img class="blur-up lazyloaded" src="../assets/images/dashboard/multikart-logo.png" alt=""></a></div>
+  <div class="logo-wrapper"><a href="index.html"></a></div>
 </div>
 <div class="sidebar custom-scrollbar;">
   <div class="sidebar-user text-center">
@@ -14,6 +14,6 @@
     <li><a class="sidebar-header" routerLink="/user-modifier" routerLinkActive="active"> <span>Modifier mon profil</span><i class="fa fa-angle-right pull-right"></i></a></li>
     <li><a class="sidebar-header" routerLink="/user-search" routerLinkActive="active"><span>Rechercher une commande</span><i class="fa fa-angle-right pull-right"></i></a></li>
     <li><a class="sidebar-header" routerLink="/user-historique" routerLinkActive="active"><span>Historique </span><i class="fa fa-angle-right pull-right"></i></a></li>
-    <li><a class="sidebar-header" routerLink="/" routerLinkActive="active"><span>Se déconnecter</span></a></li>
+    <li><a class="sidebar-header" routerLink="/logout" routerLinkActive="active"><span>Se déconnecter</span></a></li>
   </ul>
 </div>
